docs/1.13/networking-v1-networkPolicySpec.md
---
permalink: /1.13/networking/v1/networkPolicySpec
---

# package networkPolicySpec

NetworkPolicySpec provides the specification of a NetworkPolicy

## Index

* [`fn withEgress(egress)`](#fn-withegress)
* [`fn withEgressMixin(egress)`](#fn-withegressmixin)
* [`fn withIngress(ingress)`](#fn-withingress)
* [`fn withIngressMixin(ingress)`](#fn-withingressmixin)
* [`fn withPodSelector(podSelector)`](#fn-withpodselector)
* [`fn withPolicyTypes(policyTypes)`](#fn-withpolicytypes)
* [`fn withPolicyTypesMixin(policyTypes)`](#fn-withpolicytypesmixin)

## Fields

### fn withEgress

```ts
withEgress(egress)
```

List of egress rules to be applied to the selected pods. Outgoing traffic is allowed if there are no NetworkPolicies selecting the pod (and cluster policy otherwise allows the traffic), OR if the traffic matches at least one egress rule across all of the NetworkPolicy objects whose podSelector matches the pod. If this field is empty then this NetworkPolicy limits all outgoing traffic (and serves solely to ensure that the pods it selects are isolated by default). This field is beta-level in 1.8

### fn withEgressMixin

```ts
withEgressMixin(egress)
```

List of egress rules to be applied to the selected pods. Outgoing traffic is allowed if there are no NetworkPolicies selecting the pod (and cluster policy otherwise allows the traffic), OR if the traffic matches at least one egress rule across all of the NetworkPolicy objects whose podSelector matches the pod. If this field is empty then this NetworkPolicy limits all outgoing traffic (and serves solely to ensure that the pods it selects are isolated by default). This field is beta-level in 1.8

**Note:** This function appends passed data to existing values

### fn withIngress

```ts
withIngress(ingress)
```

List of ingress rules to be applied to the selected pods. Traffic is allowed to a pod if there are no NetworkPolicies selecting the pod (and cluster policy otherwise allows the traffic), OR if the traffic source is the pod's local node, OR if the traffic matches at least one ingress rule across all of the NetworkPolicy objects whose podSelector matches the pod. If this field is empty then this NetworkPolicy does not allow any traffic (and serves solely to ensure that the pods it selects are isolated by default)

### fn withIngressMixin

```ts
withIngressMixin(ingress)
```

List of ingress rules to be applied to the selected pods. Traffic is allowed to a pod if there are no NetworkPolicies selecting the pod (and cluster policy otherwise allows the traffic), OR if the traffic source is the pod's local node, OR if the traffic matches at least one ingress rule across all of the NetworkPolicy objects whose podSelector matches the pod. If this field is empty then this NetworkPolicy does not allow any traffic (and serves solely to ensure that the pods it selects are isolated by default)

**Note:** This function appends passed data to existing values

### fn withPodSelector

```ts
withPodSelector(podSelector)
```

A label selector is a label query over a set of resources. The result of matchLabels and matchExpressions are ANDed. An empty label selector matches all objects. A null label selector matches no objects.

### fn withPolicyTypes

```ts
withPolicyTypes(policyTypes)
```

List of rule types that the NetworkPolicy relates to. Valid options are Ingress, Egress, or Ingress,Egress. If this field is not specified, it will default based on the existence of Ingress or Egress rules; policies that contain an Egress section are assumed to affect Egress, and all policies (whether or not they contain an Ingress section) are assumed to affect Ingress. If you want to write an egress-only policy, you must explicitly specify policyTypes [ "Egress" ]. Likewise, if you want to write a policy that specifies that no egress is allowed, you must specify a policyTypes value that include "Egress" (since such a policy would not include an Egress section and would otherwise default to just [ "Ingress" ]). This field is beta-level in 1.8

### fn withPolicyTypesMixin

```ts
withPolicyTypesMixin(policyTypes)
```

List of rule types that the NetworkPolicy relates to. Valid options are Ingress, Egress, or Ingress,Egress. If this field is not specified, it will default based on the existence of Ingress or Egress rules; policies that contain an Egress section are assumed to affect Egress, and all policies (whether or not they contain an Ingress section) are assumed to affect Ingress. If you want to write an egress-only policy, you must explicitly specify policyTypes [ "Egress" ]. Likewise, if you want to write a policy that specifies that no egress is allowed, you must specify a policyTypes value that include "Egress" (since such a policy would not include an Egress section and would otherwise default to just [ "Ingress" ]). This field is beta-level in 1.8

**Note:** This function appends passed data to existing values